# extend_orfs

./: README.md  extend_orfs.py  meta.yaml  setup.cfg
EXTEND_ORFS/: extend_orfs_joan.py  version_from_14_9_2022_extend_orfs_joan.py
src/extend_orfs/: __init__.py  extend_orfs.py
