[metadata]
name = extend_orfs
version = 0.0.1
author = Joan Pallarès-Albanell
author_email = joan.pallares.albanell@gmail.com
description = MModule description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoanPAAL/extend_orfs/
project_urls =
https://github.com/JoanPAAL/extend_orfs/
    Github Website=https://github.com/JoanPAAL/extend_orfs/

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7.13
install_requires =
    sys
    pyranges >= 0.0.117
    csv >= 1.0
    pyfaidx >= 0.7.1
    pandas >= 1.3.5
    copy
    easyterm

[options.packages.find]
where = src
